Make bottom bar navigation ALWAYS show label. Update icons and update pt-br translation

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -6,7 +6,7 @@
     <string name="prompt_password">Senha</string>
     <string name="action_sign_up">Registrar</string>
     <string name="action_sign_in_short">Logar</string>
-    <string name="welcome">"Bem vindo!"</string>
+    <string name="welcome">"Bem-vindo!"</string>
     <string name="invalid_username">nome de usuário invalido</string>
     <string name="invalid_password">Senha precisa conter mais que 5 caracteres</string>
     <string name="login_failed">Falha ao logar</string>
@@ -24,7 +24,7 @@
     <string name="label_user_logged">Você está logado</string>
     <string name="label_you_dont_have_connection">Você não tem conexão com a internet</string>
     <string name="label_incorrect_credentials">Suas credenciais não são parâmetros válidos</string>
-    <string name="label_loading">Carregando...</string>
+    <string name="label_loading">Carregando…</string>
     <string name="label_server_not_return_correctly">Erro: não foi possível coletar os dados do servidor</string>
     <string name="label_logout">Sair</string>
     <string name="drawer_label_open">Abrir</string>
@@ -71,7 +71,7 @@
     <string name="label_about">Sobre</string>
     <string name="label_account_deleted">Conta deletada com sucesso!</string>
     <string name="label_options">Opções</string>
-    <string name="annotation_placeholder_insert_text_here">Insira o texto aqui...</string>
+    <string name="annotation_placeholder_insert_text_here">Insira o texto aqui…</string>
     <string name="label_save_annotation">Salvar anotação</string>
     <string name="alert_token_expired">Token expirado, por favor logue de novo</string>
     <string name="label_edit_book">Editar livro</string>
@@ -79,7 +79,7 @@
     <string name="label_book_details">Detalhes do livro</string>
     <string name="label_show_more">Mostrar mais</string>
     <string name="error_invalid_token">Token invalido! Faça seu login novamente</string>
-    <string name="label_loading_three_dots">Carregando...</string>
+    <string name="label_loading_three_dots">Carregando…</string>
     <string name="label_Description">Descrição</string>
     <string name="label_annotations">Anotações</string>
     <string name="label_abstracts">Resumos</string>
@@ -150,6 +150,8 @@
     <string name="label_check_email_to_change_password">Verifique seu email para trocar sua senha</string>
     <string name="label_change_password">Trocar senha</string>
     <string name="label_password_changed">Senha trocada!!</string>
+    <string name="title_annotations">Anotações</string>
+    <string name="title_profile">Perfil</string>
 
     <string name="error_email_not_valid">Email não é válido</string>
     <string name="error_password_length_between_8_and_32">Senha precisa ter entre 8  32 caracteres</string>
