Add animations on export to pdf and on delete annotation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,6 +168,7 @@
     <string name="label_password_changed">Password changed!!</string>
     <string name="label_notes_two_point">Notes:</string>
     <string name="label_export_to_pdf">Export to pdf</string>
+    <string name="label_are_you_sure_delete_annotation">Are you sure you want to delete this annotation?</string>
 
     <string name="title_annotations">Annotations</string>
     <string name="title_profile">Profile</string>
@@ -178,6 +179,7 @@
     <string name="error_password_length_between_8_and_32">Password must have length between 8 and 32</string>
     <string name="error_password_and_confirm_password_not_equals">\'Password\' field must be equals to \'confirm password\' field</string>
     <string name="error_borrow_must_have_between_1_and_64">Contact name length must have between 1 and 64</string>
+
 
 
 </resources>
