--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -154,6 +154,7 @@
     <string name="title_profile">Perfil</string>
     <string name="label_notes_two_point">Notas:</string>
     <string name="label_export_to_pdf">Exportar para pdf</string>
+    <string name="label_are_you_sure_delete_annotation">Você tem certeza que deseja deletar essa anotação?</string>
 
     <string name="error_email_not_valid">Email não é válido</string>
     <string name="error_password_length_between_8_and_32">Senha precisa ter entre 8  32 caracteres</string>
