--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,7 +176,9 @@
     <string name="label_created_at">Created at\n %1$s</string>
     <string name="label_updated_at">Updated at\n %1$s</string>
     <string name="label_annotation_list_is_empty">Annotation\'s list is empty</string>
-
+    <string name="label_no_book_selected">No book selected</string>
+    <string name="label_book_borrowed_and_not_returned">This book has already been borrowed and has not been returned.</string>
+    <string name="label_analyzing_avaliability">Analyzing availability…</string>
 
 
     <string name="error_email_not_valid">Email not valid</string>
