--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -186,5 +186,6 @@
     <string name="error_password_length_between_8_and_32">Senha precisa ter entre 8  32 caracteres</string>
     <string name="error_password_and_confirm_password_not_equals">Os campos \'Senha\' e \'Confirmar senha\' precisam ser iguais</string>
     <string name="error_borrow_must_have_between_1_and_64">Nome de contato deve ter entre 1 e 64 caracteres</string>
+    <string name="label_too_long_time_request">Requisição muito longa</string>
 
 </resources>
